Added GetOrganizationByName and GetOrganizationByID APIs
