# swagger/dev-analytics-affiliation.yaml
@@ -344,6 +344,86 @@ paths:
           in: header
           type: string
           required: true
+  /affiliation/{projectSlug}/find_organization_by_id/{orgID}:
+    get:
+      summary: Find organization by ID
+      operationId: getFindOrganizationByID
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: "Success"
+          headers:
+            X-REQUEST-ID:
+              type: string
+              description: Request ID
+          schema:
+            $ref: "#/definitions/organization-data-output"
+        "400":
+          $ref: "#/responses/invalid-request"
+        "401":
+          $ref: "#/responses/unauthorized"
+        "403":
+          $ref: "#/responses/forbidden"
+      tags:
+        - affiliation
+        - find_organization
+        - get
+      parameters:
+        - name: projectSlug
+          in: path
+          type: string
+          required: true
+          description: Project slug URL encoded like 'academy-software-foundation/opencue'
+        - name: orgID
+          in: path
+          type: integer
+          required: true
+          description: Organization ID to be found
+        - name: Authorization
+          in: header
+          type: string
+          required: true
+  /affiliation/{projectSlug}/find_organization_by_name/{orgName}:
+    get:
+      summary: Find organization by Name
+      operationId: getFindOrganizationByName
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: "Success"
+          headers:
+            X-REQUEST-ID:
+              type: string
+              description: Request ID
+          schema:
+            $ref: "#/definitions/organization-data-output"
+        "400":
+          $ref: "#/responses/invalid-request"
+        "401":
+          $ref: "#/responses/unauthorized"
+        "403":
+          $ref: "#/responses/forbidden"
+      tags:
+        - affiliation
+        - find_organization
+        - get
+      parameters:
+        - name: projectSlug
+          in: path
+          type: string
+          required: true
+          description: Project slug URL encoded like 'academy-software-foundation/opencue'
+        - name: orgName
+          in: path
+          type: string
+          required: true
+          description: Organization name to be found
+        - name: Authorization
+          in: header
+          type: string
+          required: true
   /affiliation/{projectSlug}/add_domain/{orgName}/{domain}:
     put:
       summary: Add domain to organization (if not exists) and affiliate all profiles with that domain to this organization
